[tool.poetry]
name = "pyproject-toml"
version = "0.1.0"
description = ""
authors = ["Стас naprienko ekaterina <catrit1993@gmail.com>"]
readme = "README.md"
packages = [{include = "pyproject"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
